# travelling

./: README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/admin/: page.tsx
app/blog/: page.tsx
app/contact/: page.tsx
backend/: Cargo.toml  Dockerfile  README.md
backend/migrations/: 001_initial.sql
backend/src/: config.rs  main.rs
backend/src/database/: mod.rs
backend/src/handlers/: admin.rs  auth.rs  bookings.rs  mod.rs  packages.rs
backend/src/middleware/: auth.rs
backend/src/models/: booking.rs  category.rs  mod.rs  package.rs  user.rs
backend/src/utils/: auth.rs  mod.rs  validation.rs
components/: about-hero.tsx  about-stats.tsx  about-story.tsx  about-team.tsx  about-testimonials.tsx  about-values.tsx  auth-provider.tsx  blog-grid.tsx  blog-hero.tsx  blog-post.tsx  blog-sidebar.tsx  booking-form.tsx  category-links.tsx  contact-form.tsx  contact-hero.tsx  contact-info.tsx  contact-map.tsx  featured-packages.tsx  footer.tsx  gallery-filters.tsx  gallery-grid.tsx  gallery-hero.tsx  header.tsx  hero-section.tsx  inquiry-section.tsx  mobile-menu.tsx  package-details.tsx  package-filters.tsx  package-grid.tsx  package-hero.tsx  package-inclusions.tsx  package-itinerary.tsx  package-listing-hero.tsx  package-reviews.tsx  related-packages.tsx  seo-head.tsx  testimonials-section.tsx
hooks/: use-auth.tsx
lib/: api.ts
public/: manifest.json  robots.txt  sitemap.xml
scripts/: README.md  check_database.py  reset_database.py  seed_database.py  setup_and_seed.sh  test_integration.sh
(+27 files in other folders)
